Update paper backup from Overleaf.
Currently about finished with the main body, but it needs polishing. I
also need to compile more results and write those sections.

Related to xwsxethan/MusicScoring#93

--- a/Documents/Onward Paper/HolderOnward2015.bib
+++ b/Documents/Onward Paper/HolderOnward2015.bib
@@ -857,3 +857,88 @@ howpublished = {\url{https://github.com/xwsxethan/MusicScoring}},
 month = {2},
 year = {2015},
 }
+
+@Misc{FinaleNotepad,
+author = {Inc., Makemusic},
+title = {Finale Notepad},
+howpublished = {\url{http://www.finalemusic.com/products/finale-notepad/}},
+month = {3},
+year = {2015},
+}
+
+@Misc{Sibelius,
+author = {Inc., Avid Technology},
+title = {Sibelius},
+howpublished = {\url{http://www.avid.com/US/products/sibelius}},
+month = {3},
+year = {2015},
+}
+
+@Misc{MusicXML,
+author = {Inc., Makemusic},
+title = {MusicXML},
+howpublished = {\url{http://www.musicxml.com/}},
+month = {3},
+year = {2015},
+}
+
+@Misc{Audiveris,
+author = {Bitteur, Hervé},
+title = {Audiveris},
+howpublished = {\url{https://audiveris.kenai.com/}},
+month = {1},
+year = {2013},
+}
+
+@Misc{JSONAPI,
+author = {Simple, JSON},
+title = {json-simple},
+howpublished = {\url{https://code.google.com/p/json-simple/}},
+month = {2},
+year = {2012},
+}
+
+@Misc{XMLAPI,
+author = {Xerces, Apache},
+title = {The Apache Xerces™ Project},
+howpublished = {\url{http://xerces.apache.org/index.html}},
+day = {20},
+month = {1},
+year = {2013},
+}
+
+@Misc{jQuery,
+author = {The jQuery Foundation},
+title = {jQuery},
+howpublished = {\url{https://jquery.com/}},
+year = {2015},
+}
+
+@Misc{Bootstrap,
+author = {Otto and Thornton},
+title = {Bootstrap},
+howpublished = {\url{http://getbootstrap.com/}},
+year = {2015},
+}
+
+@Misc{DataTables,
+author = {SpryMedia Ltd},
+title = {DataTables Table plug-in for jQuery},
+howpublished = {\url{https://www.datatables.net/}},
+year = {2015},
+}
+
+@Misc{D3,
+author = {Bostock, Mike},
+title = {D3 Data-Driven Documents},
+howpublished = {\url{http://d3js.org/}},
+year = {2013},
+}
+
+@Misc{VexFlow,
+author = {Cheppudira, Mohit Muthanna},
+title = {vexflow},
+howpublished = {\url{https://github.com/0xfe/vexflow}},
+year = {2010},
+}
+
